--- a/donations.html
+++ b/donations.html
@@ -52,7 +52,8 @@
   <input class="city input-medium  input-area" type="text" name="city" placeholder="City name">
 
   <label class=" label-text state">STATE</label>
-  <select style="color: #c1f7d5;"class=" input-small input-area state" name="AL" required>
+  <select class=" input-small input-area state" name="AL" style="color: #c1f7d5;
+  background: #354463;" required>
     <option value="AL">AL</option>
     <option value="AK">AK</option>
     <option value="AR">AR</option>	
@@ -146,7 +147,7 @@
 <!--------------end of donation form------------------>
 
 <!--------------footer area---------------------->
-<footer>
+<footer> 
     <div class="bottom-bar">
       <div class="logo">The Green <br />Trees Initiative</div>
       <div class="footer-links">
@@ -180,7 +181,7 @@
         #STOP CLIMATE CHANGE
     </div>
     </div>
-    </footer>
+    </footer> 
 <!-----------------------end of footer area ----------->
   </body>
 </html>
