--- a/aboutus.html
+++ b/aboutus.html
@@ -8,17 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="HandheldFriendly" content="true" />
     
-    <link rel="stylesheet" href="homecss/style.css" />
-    <link rel="stylesheet" href="homecss/tablet.css" />
-    <link rel="stylesheet" href="homecss/mobile.css" />
+    <link rel="stylesheet" href="/css/homecss/homedesktop.css" />
+    <link rel="stylesheet" href="/css/homecss/hometablet.css" />
+    <link rel="stylesheet" href="/css/homecss/homemobile2.css" />
+    <link rel="stylesheet" href="/css/homecss/homemobile1.css" />
 
-    <link rel="stylesheet" href="donationcss/desktop.css" />
-    <link rel="stylesheet" href="donationcss/tablet.css" />
-    <link rel="stylesheet" href="donationcss/mobile.css" />
-
-    <link rel="stylesheet" href="aboutcss/desktop.css" />
-    <link rel="stylesheet" href="aboutcss/tablet.css" />
-    <link rel="stylesheet" href="aboutcss/mobile.css" />
+    <link rel="stylesheet" href="/css/aboutcss/aboutdesktop.css" />
+    <link rel="stylesheet" href="/css/aboutcss/abouttablet.css" />
+    <link rel="stylesheet" href="/css/aboutcss/aboutmobile.css" />
     
     <title>About Page</title>
   </head>
@@ -27,7 +24,7 @@
 
     <header>
       <div class="top-bar">
-        <div class="logo">The Green <br />Trees Initiative</div>
+        <a href="home.html" class="logo">The Green <br />Trees Initiative</a>
         <div class="nav-links">
           <a href="#help">How we help</a>
           <a href="#stories">Get involved</a>
@@ -54,63 +51,63 @@
             </h4>
      </div></div></div>
      <div class="img2">
-            <div class="what-box"><a name="whatwedo">WHAT WE DO</a></div>
+            <div class="what-box white-box"><a name="whatwedo">WHAT WE DO</a></div>
          <div class="mission-title">
             We strive for better environmental management, community empowerment, and livelihood improvement using tree-planting as an entry point.
          </div>
          <!-- <div class="symbol-table"> -->
              <div class="symbol-part1">
              <div class="symbol-info">
-                 <img src="assets/assets/about-us/Icon person.png">
+                 <img src="/assets/assets/about-us/Icon person.png">
                  <div >
                  <h3 class="symbol-title">Stay open-minded</h3>
                  <p class="symbol-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis scelerisque lectus.</p class="symbol-text">
                 </div>
              </div>
              <div class="symbol-info">
-                <img src="assets/assets/about-us/Icon earth.png">
+                <img src="/assets/assets/about-us/Icon earth.png">
                 <div >
                 <h3 class="symbol-title">Protect the Earth</h3>
                 <p class="symbol-text">Aliquam ullamcorper feugiat urna ut bibendum. Nulla eu erat sed ipsum eleifend.</p class="symbol-text">
                </div>
             </div>
             <div class="symbol-info">
-                <img src="assets/assets/about-us/Icon sun.png">
+                <img src="/assets/assets/about-us/Icon sun.png">
                 <div >
                 <h3 class="symbol-title">Stay optimistic</h3>
                 <p class="symbol-text">Ut turpis ex, elementum ac sapien ac, commodo molestie lectus. Fusce et tempus nisi.</p class="symbol-text">
                </div>
             </div>
             <div class="symbol-info">
-                <img src="assets/assets/about-us/Icon heart.png">
+                <img src="/assets/assets/about-us/Icon heart.png">
                 <div >
                 <h3 class="symbol-title">Work from love</h3>
                 <p  class="symbol-text">Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
                </div>
             </div>
             <div class="symbol-info">
-                <img src="assets/assets/about-us/Icon hand.png">
+                <img src="/assets/assets/about-us/Icon hand.png">
                 <div >
                 <h3 class="symbol-title">Lend a hand</h3>
                 <p  class="symbol-text">Curabitur faucibus, libero vel posuere pharetra, dolor erat pharetra purus, ut accumsan.</p>
                </div>
             </div>
             <div class="symbol-info">
-                <img src="assets/assets/about-us/Icon flower.png">
+                <img src="/assets/assets/about-us/Icon flower.png">
                 <div >
                 <h3 class="symbol-title">Plant new seeds</h3>
                 <p  class="symbol-text">Donec a maximus ligula. Mauris consequat sapien lectus, eu aliquam sem cursus.</p>
                </div>
             </div>
             <div class="symbol-info">
-                <img src="assets/assets/about-us/Icon people.png">
+                <img src="/assets/assets/about-us/Icon people.png">
                 <div >
                 <h3 class="symbol-title">Work together</h3>
                 <p  class="symbol-text">Morbi eu fermentum dui. Nunc sit amet erat ut urna facilisis iaculis. Vivamus efficitur.</p>
                </div>
             </div>
             <div class="symbol-info">
-                <img src="assets/assets/about-us/Icon book.png">
+                <img src="/assets/assets/about-us/Icon book.png">
                 <div >
                 <h3 class="symbol-title">Be an open book</h3>
                 <p class="symbol-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mi felis, auctor vitae vestibulum vel, consequat eu.</p>
@@ -123,7 +120,7 @@
       <!----------------------end of into-------->
 
  <!-------------team area-----------> 
- <section class="stories-area">
+ <section class="team-area">
 <div class="team-main-grid">
   <div  class="info-text">
   <div class="our-team"><p class="card-title">OUR TEAM</p>
@@ -134,54 +131,65 @@
 <div class="team-flex">
   <div class="profile-img">
     <p class="card-title profile-name ">Person Name, Title Goes Here</p>
-    <img class="img-size" src="assets/assets/about-us/Screen-Shot-2018-10-04-at-9.35.07-PM.png">
+    <img class="img-size" src="/assets/assets/about-us/Screen-Shot-2018-10-04-at-9.35.07-PM.png">
   </div>
  
   <div class="profile-img">
     <p class="card-title profile-name ">Person Name, Title Goes Here</p>
-    <img class="img-size" src="assets/assets/about-us/Screen-Shot-2018-10-04-at-9.35.17-PM.png">
+    <img class="img-size" src="/assets/assets/about-us/Screen-Shot-2018-10-04-at-9.35.17-PM.png">
   </div>
   <div class="profile-img">
     <p class="card-title profile-name ">Person Name, Title Goes Here</p>
-    <img class="img-size" src="assets/assets/about-us/Screen-Shot-2018-10-04-at-9.35.37-PM.png">
+    <img class="img-size" src="/assets/assets/about-us/Screen-Shot-2018-10-04-at-9.35.37-PM.png">
   </div>
   <div class="profile-img">
     <p class="card-title profile-name ">Person Name, Title Goes Here</p>
-    <img class="img-size" src="assets/assets/about-us/Screen-Shot-2018-10-04-at-9.36.04-PM.png">
+    <img class="img-size" src="/assets/assets/about-us/Screen-Shot-2018-10-04-at-9.36.04-PM.png">
   </div>
   <div class="profile-img">
     <p class="card-title profile-name ">Person Name, Title Goes Here</p>
-    <img class="img-size" src="assets/assets/about-us/Screen-Shot-2018-10-04-at-9.36.19-PM.png">
+    <img class="img-size" src="/assets/assets/about-us/Screen-Shot-2018-10-04-at-9.36.19-PM.png">
   </div>
   <div class="profile-img">
     <p class="card-title profile-name ">Person Name, Title Goes Here</p>
-    <img class="img-size" src="assets/assets/about-us/Screen-Shot-2018-10-04-at-9.37.13-PM.png">
+    <img class="img-size" src="/assets/assets/about-us/Screen-Shot-2018-10-04-at-9.37.13-PM.png">
   </div>
   
 </div>
 </div>
  </section>  
+<!-- our impact section-------------------------- -->   
+ <div class="impact-area"> 
+  <div class="our-impact white-box">OUR IMPACT</div>
+     <div class="impact-title">We invest in a better tomorrow for the planet and all its people.</div>        <div class="impact-facts">
+      <div class="fact">50<div class="fact-desc">million trees planted in deforested areas</div>
+      </div>
+      <div class="fact">200<div class="fact-desc">women employed in communities</div>
+      </div>
+      <div class="fact">25,000<div class="fact-desc">women employed in communities</div>
+      </div>
+      <div class="fact">150<div class="fact-desc">women employed in communities</div>
+      </div>        </div>    </div>
 <!---------------------subscribe area-------------------->
 <section class="subscribe-section">
-    <div class="subscribe-area">
-      <div>
-        <p class="subscribe-title">Subscribe to our monthly newsletter and stay up to date with all news and events.</p>
-      </div>
-      <div><form>
-        <input type="email"
-        name="email"
-        placeholder="Enter your email address" class="email-box">
-      </form>
-      </div>
-      <div>
-        <a  class="subscribe-read-more">Subscribe</a>
-      </div>
+  <div class="subscribe-area">
+    <div class="subscribe-title">
+      <p >Subscribe to our monthly newsletter and stay up to date with all news and events.</p>
     </div>
-    </section>
+    <form >
+      <input class="email-box"type="email"
+      name="email"
+      placeholder="Enter your email address" >
+    </form>
+    <div >
+      <a class="subscribe-read-more" >Subscribe</a>
+    </div>
+  </div>
+  </section>
 <!--------------footer area---------------------->
     <footer> 
         <div class="bottom-bar">
-          <div class="logo">The Green <br />Trees Initiative</div>
+          <div class="bottom-logo logo">The Green <br />Trees Initiative</div>
           <div class="footer-links">
           <div class="contact-us">
             <p class="footer-info-text">CONTACT US</p>
