--- a/donations.html
+++ b/donations.html
@@ -8,19 +8,20 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="HandheldFriendly" content="true" />
-    <link rel="stylesheet" href="homecss/style.css" />
-    <link rel="stylesheet" href="homecss/tablet.css" />
-    <link rel="stylesheet" href="homecss/mobile.css" />
-    <link rel="stylesheet" href="donationcss/desktop.css" />
-    <link rel="stylesheet" href="donationcss/tablet.css" />
-    <link rel="stylesheet" href="donationcss/mobile.css" />
+    <link rel="stylesheet" href="/css/homecss/homedesktop.css" />
+    <link rel="stylesheet" href="/css/homecss/hometablet.css" />
+    <link rel="stylesheet" href="/css/homecss/homemobile2.css" />
+    <link rel="stylesheet" href="/css/homecss/homemobile1.css" />
+    <link rel="stylesheet" href="/css/donationcss/donationdesktop.css" />
+    <link rel="stylesheet" href="/css/donationcss/donationtablet.css" />
+    <link rel="stylesheet" href="/css/donationcss/donationmobile.css" />
 
     <title>Donation Page</title>
   </head>
   <body>
       <!------------------header area----------------------------->
     <header>
-      <div class=" logo title-logo">The Green <br />Trees Initiative</div>
+      <a href="home.html" class="logo title-logo">The Green <br />Trees Initiative</a>
     </header>
     <!--------------------------end of header-->
 
@@ -130,7 +131,7 @@
   <input class=" input-small year input-area" type="text" name="year" placeholder="YYYY" maxlength="4" required>
 </div>
 <label class="sec-code label-text">SECURITY CODE</label>
-<input class=" input-small sec-code input-area" type="text" name="security-code" placeholder="CVV" required>
+<input class=" input-small sec-code input-area" type="text" name="security-code" placeholder="CVV" maxlength="3" required>
 </div>
 <p class="confirm form-title">Click the button to confirm your donation of $10, recurring monthly.</p>
 <div class="navigate">
@@ -149,7 +150,7 @@
 <!--------------footer area---------------------->
 <footer> 
     <div class="bottom-bar">
-      <div class="logo">The Green <br />Trees Initiative</div>
+      <div class="bottom-logo logo">The Green <br />Trees Initiative</div>
       <div class="footer-links">
       <div class="contact-us">
         <p class="footer-info-text">CONTACT US</p>
